# trading-bot

./: Cargo.toml  README.md
src/: bot.rs  cli.rs  indicators.rs  klines.rs  main.rs  util.rs
