[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features=["derive"] }
serde_json = "1.0.87"
chrono = "0.4.22"